--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Cliquet\\anaconda3\\python.exe"
+    "python.pythonPath": "C:\\Users\\Cliquet\\AppData\\Local\\Microsoft\\WindowsApps\\python3.8.exe"
 }
